<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Student_Schedule">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/viewDriver_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:text="@string/schedule"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="25dp">

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="5dp"
                android:onClick="create_Schedule"
                android:text="@string/create_schedule"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#198754"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_create_24"
                app:iconGravity="textEnd">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="view_Schedule"
                android:text="@string/view_schedule"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#0d6efd"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_remove_red_eye_24"
                app:iconGravity="textEnd">

            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="97dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:onClick="mark_leave"
                android:text="@string/leave_schedule"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:backgroundTint="#ffc107"
                app:cornerRadius="16dp"
                app:elevation="5dp"
                app:icon="@drawable/ic_baseline_check_box_24"
                app:iconGravity="textEnd">

            </com.google.android.material.button.MaterialButton>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black">



            </View>
        </LinearLayout>


    </LinearLayout>

</ScrollView>