<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Attendance">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="@drawable/layout"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/viewDriver_back_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:transitionName="transition_back_button" />

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/material_on_surface_stroke"
                    android:onClick="callBack">

                </Button>
            </RelativeLayout>

            <TextView
                android:id="@+id/schedule_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="11dp"
                android:text="@string/ateendance"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:transitionName="transition_crrate_button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginTop="30dp">

                <TableRow
                    android:background="@color/blue">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/Date"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        android:textSize="16sp"
                        android:layout_weight="5"
                        android:layout_gravity="center_horizontal">

                    </TextView>


                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/pateendance"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:layout_weight="5"
                        android:layout_gravity="center_horizontal">

                    </TextView>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:text="@string/dateendance"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        android:textSize="14sp"
                        android:layout_weight="5"
                        android:layout_gravity="center_horizontal">

                    </TextView>

                </TableRow>


            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/arecycler_View"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/ly1"
                android:layout_weight="1"
                android:padding="5dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>



            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black">

            </View>




        </LinearLayout>


    </LinearLayout>

</ScrollView>