<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Verify_OTP">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <RelativeLayout
            android:layout_width="34dp"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/signup_back_button"
                android:padding="5dp"
                android:src="@drawable/close_icon"
                app:tint="@color/black"></ImageView>

            <Button

                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/material_on_surface_stroke"
                android:onClick="callBack">

            </Button>

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:paddingTop="5dp"
            android:layout_marginTop="30dp"
            android:text="@string/otp_code"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="100sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:includeFontPadding="false"
            android:text="@string/otp_verify"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="22sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/otp_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp">

        </TextView>

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:cursorVisible="true"
            android:inputType="number"
            android:itemBackground="@color/lightWhite"
            app:cursorColor="@color/black"
            app:hideLineWhenFilled="true"
            android:textColor="@color/black"
            app:itemCount="6"
            app:itemHeight="50dp"
            app:itemRadius="5dp"
            app:itemWidth="50dp"
            app:lineColor="@color/colorAccent">

        </com.chaos.view.PinView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="Verify Code"
            android:textColor="@color/black"
            android:onClick="callNextScreen">

        </Button>

    </LinearLayout>

</ScrollView>